# typed-process-effectful

./: .gitignore  CHANGELOG.md  LICENSE.md  Makefile  README.md  cabal.haskell-ci  cabal.project  effectful-typed-process.cabal  fourmolu.yaml  typed-process-effectful.cabal
.github/workflows/: haskell-ci.yml  linters.yml
example/: Main.hs
src/Effectful/Process/: Typed.hs
test/: Main.hs  Utils.hs
