cabal-version:      3.0
name:               effectful-typed-process
version:            0.0.1.0
synopsis:
  A binding of the @typed-process@ library for the @effectful@ effect system.

description:
  This library provides an alternative `Process` effect for the
  [`effectful`][https://github.com/haskell-effectful/effectful] ecosystem.
  While to the `Process` effect shipped with the `effectful` library is based on
  the [`process`][https://hackage.haskell.org/package/process] package this
  implementation relies on
  [`typed-process`][https://hackage.haskell.org/package/typed-process] instead.

category:           System
homepage:
  https://github.com/haskell-effectful/effectful-typed-process#readme

bug-reports:
  https://github.com/haskell-effectful/effectful-typed-process/issues

author:             Dominik Peteler
maintainer:         Dominik Peteler
license:            BSD-3-Clause
build-type:         Simple
tested-with:        GHC ==8.10.7 || ==9.0.2 || ==9.2.2
extra-source-files:
  CHANGELOG.md
  LICENSE.md
  README.md

source-repository head
  type:     git
  location:
    https://github.com/haskell-effectful/effectful-typed-process

common language
  ghc-options:        -Wall -Wcompat
  default-language:   Haskell2010
  default-extensions:
    DataKinds
    FlexibleContexts
    GADTs
    KindSignatures
    TypeOperators

library
  import:          language
  hs-source-dirs:  src
  exposed-modules: Effectful.Process.Typed
  build-depends:
    , base            <=4.17
    , bytestring
    , effectful-core
    , typed-process

test-suite effectful-typed-process-test
  import:         language
  ghc-options:    -rtsopts -threaded -with-rtsopts=-N
  build-depends:
    , base
    , effectful
    , effectful-core
    , effectful-typed-process
    , tasty
    , tasty-hunit

  hs-source-dirs: test
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:  Utils
